Update Makefile to generate proper version numbers

--- a/debian/Makefile
+++ b/debian/Makefile
@@ -1,26 +1,33 @@
 KEY=CD9C0E84
 DIST=trusty
-PROJECT=python-chaos
-PYTHON_PROJECT=$(shell head -n1 debian/changelog | cut -d" " -f1)
-GIT_REV=$(shell git rev-parse --short --verify HEAD)
+PROJECT=$(shell head -n1 debian/changelog | cut -d" " -f1)
+PYTHON_PROJECT=$(shell head -n1 debian/changelog | cut -d" " -f1 | sed 's/-//')
 MAJOR_VERSION=$(shell head -n1 debian/changelog | egrep -o '[0-9]+\.' | sed 's/\.//' | head -n1)
 MINOR_VERSION=$(shell head -n1 debian/changelog | egrep -o '\.[0-9]+' | sed 's/\.//' | head -n1)
-DEV_VERSION=1
+
+GIT_REV=$(shell git rev-parse --short --verify HEAD)
+LAST_CHANGELOG_REV=$(shell git log -n 1 --pretty=format:%h -- debian/changelog)
+COMMITS_SINCE_LAST_CHANGELOG=$(shell git rev-list $(LAST_CHANGELOG_REV)..HEAD | wc -l)
 
 ifndef VERSION
 TMP_VERSION=$(shell expr $(MINOR_VERSION) + 1)
 VERSION=$(MAJOR_VERSION).$(TMP_VERSION)
 endif
 
+CURRENT_DEV=$(shell git config user.email)
+
+SNAPSHOT_VERSION=$(VERSION)~$(COMMITS_SINCE_LAST_CHANGELOG).g$(GIT_REV)
+
 clean:
 	rm -vfR build
 	rm -vfR debian/control
 	rm -vfR debian/$(PROJECT)*
+	rm -vfR debian/python-$(PROJECT)*
 	rm -vfR dist
 	rm -vfR *.egg-info
 
 changelog:
-	git dch --ignore-branch --snapshot --auto --git-author
+	git dch --ignore-branch --snapshot --auto --git-author --new-version "$(VERSION)" --snapshot-number "$(COMMITS_SINCE_LAST_CHANGELOG)"
 
 release:
 	git dch --ignore-branch --release --auto -N $(VERSION) --git-author
@@ -34,10 +41,9 @@ generate_all: generate_control
 generate_control:
 	cat debian/control.source debian/control.$(DIST) > debian/control
 
-package: clean generate_all
-	make -f debian/Makefile bump_version VERSION=$(VERSION)~dev$(DEV_VERSION)
-	sed -i "0,/RELEASE/s/(.*)/($(VERSION)~dev$(DEV_VERSION))/" debian/changelog
-	dpkg-buildpackage -A -us -uc
+package: clean generate_all changelog
+	make -f debian/Makefile bump_version VERSION=$(SNAPSHOT_VERSION)
+	dpkg-buildpackage -us -uc -rfakeroot
 	git checkout $(PYTHON_PROJECT)/version.py
 	git checkout debian/changelog
 
@@ -60,4 +66,4 @@ pbuild:
 	pbuilder-dist "$(DIST)" "$(CHANGES)"
 
 version:
-	echo $(VERSION)
+	echo $(SNAPSHOT_VERSION)
